Fix dic visibility

--- a/main.css
+++ b/main.css
@@ -91,7 +91,7 @@ button:focus {
   box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
 }
 .result {
-  display: flex;
+  display: none;
   flex-direction: column;
   padding: 2rem;
   justify-content: center;
